# ruined-light

./: .gitignore  CMakeLists.txt  compile_commands.json  install.sh
.cache/clangd/index/: game-settings.hpp.30592E9807E71330.idx  game.hpp.ABABC10012E5C4A4.idx  main.cpp.DCEB9572FBAED66E.idx  settings.hpp.C9DA7C47619CFE74.idx
include/: game.hpp
include/defaults/: fonts.hpp  screen-types.hpp  settings.hpp
include/dialog/: intro.hpp
include/helpers/: get-center.hpp
include/models/: game-settings.hpp  lights.hpp  player.hpp
include/screens/: gameplay.hpp  intro.hpp
src/: CPackConfig.cmake  CPackSourceConfig.cmake  RuinedLight  compile_commands.json  main.cpp
